--- a/css/mainWindow.css
+++ b/css/mainWindow.css
@@ -14,9 +14,11 @@ body {
 
 #reversi {
     display: flex;
+    height: 100vh;
+    padding: 5px;
     flex-direction: row;
     justify-content: space-evenly;
-
+    align-items: center;
 }
 
 #gameBoard {
@@ -42,3 +44,50 @@ body {
     width: 200px;
 }
 
+#rule {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px dashed;
+    height: 99vh;
+}
+
+/*#rule > * {*/
+/*}*/
+
+#close {
+    position: absolute;
+    border: none;
+    left: calc(100vw - 30px);
+    top: 5px;
+
+}
+
+li {
+    list-style: none;
+}
+
+h4 {
+    font-size: 2rem;
+}
+
+#reversi {
+    display: none;
+/*  在文件被关掉之前不展示 */
+
+}
+
+button {
+    border: none;
+    background-color: #fff;
+    height: 30px;
+    width: 53px;
+}
+
+@media screen and (max-width: 600px) {
+    #reversi {
+        display: flex;
+        flex-direction: column;
+    }
+}
