--- a/docs/css/mainWindow.css
+++ b/docs/css/mainWindow.css
@@ -8,18 +8,11 @@
 
 body {
     background-color: #f3f3f3;
-    height: 100vh;
-    width: 100vw;
+    height: 99vh;
+    width: 99vw;
 }
 
-#reversi {
-    display: flex;
-    height: 100vh;
-    padding: 5px;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-}
+
 
 #gameBoard {
     display: grid;
@@ -35,7 +28,9 @@ body {
     background-color: #fff;
     border: 1px solid #000;
     border-radius: 5px;
+    transition: all 0.5s;
 }
+
 
 #info {
     max-height: 300px;
@@ -85,9 +80,27 @@ button {
     width: 53px;
 }
 
+@media screen and (min-width: 600px) {
+    #reversi {
+        display: flex;
+        height: 100vh;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+}
+
 @media screen and (max-width: 600px) {
     #reversi {
         display: flex;
+        height: 100vh;
         flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
     }
 }
+
+#reversi {
+    display: none;
+}
+
